--- a/index.css
+++ b/index.css
@@ -1,22 +1,23 @@
 body {
     margin: 0;
     text-align: center;
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    background-color: whitesmoke;
 }
 
 .top-container{
-    background-color: rgb(92, 0, 241);
+    background-color: #6943FF;
     color: white;
 
 }
 h1{
-    padding-top:20px;
+    padding-top:40px;
     padding-bottom: 20px;
 }
 #input{
     padding: 35px 1px;
-    border: 2px solid white;
-    background-color: rgb(92, 0, 241);
+    border: 2px solid whitesmoke;
+    background-color: #6943FF;
     border-radius: 4px;
     font-size:60px;
     width: 130px;
@@ -29,11 +30,38 @@ h1{
 #btn{
     margin-top: 40px;
     margin-bottom: 40px;
-    padding: 10px 30px;
+    padding: 13px 30px;
     border-radius: 4px;
     border: none;
-    background-color: white;
+    background-color: whitesmoke;
     font-size: 16px;
-    font-family:  ;
+    font-family:monospace ;
+    position: relative;
+    transition: transform 0.1s ease
+}
+#btn:active{ 
+        transform: translateY(3px); 
+}
+#btn:hover{
+    background-color:rgb(172, 172, 172) ;
+}
+
+.sub-container{
+    background-color: white;
+    width: 600px;
+    margin: 30px auto;
+    padding: 10px 0;
+}
+
+.label{
+    color: #6943FF;
+    font-weight: bold;
+    font-size: 22px;
+}
+
+#output-1, #output-2, #output-3{
+    font-size: 19px;
+    width: 600px;
+    height: 30px
 }
 
